# shared-channel

./: CHANGELOG.md  Cargo.toml  README.md  release.toml
.github/workflows/: rust.yml
example/: .gitignore  Cargo.toml  Makefile.toml  README.md  bootstrap.js  index.html  index.js  package.json  webpack.config.js  worker.js
example/src/: lib.rs
src/: lib.rs  spsc.rs
