[package]
name = "wasm-rs-shared-channel"
version = "0.1.0"
authors = ["Yurii Rashkovskii <yrashk@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Shared channel for WebAssembly"
repository = "https://github.com/wasm-rs/shared-channel"
documentation = "https://docs.rs/wasm-rs-shared-channel"
readme = "README.md"
keywords = ["wasm", "SharedArrayBuffer", "channel", "thread"]

[lib]
crate-type = ["cdylib","lib"]

[dependencies]
bincode = { version = "1.3.1", optional = true }
js-sys = "0.3.47"
serde = { version = "1.0.123", optional = true }
thiserror = "1.0.23"
wasm-bindgen = "0.2.70"

[dev-dependencies]
wasm-rs-dbg = "0.1.0"
wasm-bindgen-test = "0.3.20"

[features]
default = ["serde", "serde-bincode"]
serde-bincode = ["bincode"]
