[package]
name = "shared-channel-demo"
version = "0.1.0"
authors = ["Yurii Rashkovskii <yrashk@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.70"
wasm-rs-shared-channel = { path = ".." }
wasm-rs-dbg = { version = "0.1", default-features = false, features = ["console-log"] }
serde = { version = "1.0.123", features = ["derive"] }
bincode = "1.3.1"
js-sys = "0.3.47"
console_error_panic_hook = "0.1.6"
